src/main/resources/static/web/style.css
body {
    background: #9CECFB;
    /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #0052D4, #65C7F7, #9CECFB);
    /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #0052D4, #65C7F7, #9CECFB);
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.ship{
  background-color: deepskyblue;
}

.salvo{
  background-color: midnightblue;
}

h1, p {
  display: flex;
  justify-content: center;
  color: midnightblue;
}

.tables{
  display: flex;
  justify-content: space-around;
}

.hit{
  background-color: red;
}

#myTable {
  display: table;
  width: 495px;
  height: 495px;
  table-layout: fixed;
  text-align: center;
  background-color: midnightblue;
  color: lightskyblue;
  margin-bottom: 20px;
}

#salvoTable {
  display: table;
  width: 495px;
  height: 495px;
  table-layout: fixed;
  text-align: center;
  background-color: deepskyblue;
  color: midnightblue;
  margin-bottom: 20px;
}

#destroyer {
 display: table;
 table-layout: fixed;
 text-align: center;
 width: 90px;
 height: 45px;
 color: midnightblue;
 background-color: deepskyblue;
}

#patrolBoat {
 display: table;
 table-layout: fixed;
 text-align: center;
 width: 135px;
 height: 45px;
 color: midnightblue;
 background-color: deepskyblue;
}

#battleship {
 display: table;
 table-layout: fixed;
 text-align: center;
 width: 175px;
 height: 45px;
 color: midnightblue;
 background-color: deepskyblue;
}

#carrier {
 display: table;
 table-layout: fixed;
 text-align: center;
 width: 225px;
 height: 45px;
 color: midnightblue;
 background-color: deepskyblue;
}

#submarine {
 display: table;
 table-layout: fixed;
 text-align: center;
 width: 135px;
 height: 45px;
 color: midnightblue;
 background-color: deepskyblue;
}

